--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function getUser() {
             // ...
         } else {
             // User is signed out
-            window.location.href = "https://dashboard.admin.elev8.cards/pages/sign-up.html"
+            window.location.href = "https://dashboard.nest-mate.com/pages/sign-up.html"
             // ...
         }
     });
