--- a/pages/editor.html
+++ b/pages/editor.html
@@ -209,7 +209,7 @@
                     </div>
                     <br>
                 </div>
-                <button style="position: fixed;bottom:30px;left:30px;padding:10px" onclick="window.location.href = 'https://dashboard.admin.elev8.cards'">Back To Dashboard</button>
+                <button style="position: fixed;bottom:30px;left:30px;padding:10px" onclick="window.location.href = 'https://dashboard.nest-mate.com'">Back To Dashboard</button>
                 <script>
                 document.getElementById('ViewTab').click()
 
