--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -111,7 +111,7 @@
                         </ul>
                     </div>
                     <div class="pricing-footer">
-                        <a href="https://dashboard.admin.elev8.cards/pages/verify?type=pro" class="main-btn btn-hover border-btn">CHOOSE PLAN</a>
+                        <a href="https://dashboard.nest-mate.com/pages/verify?type=pro" class="main-btn btn-hover border-btn">CHOOSE PLAN</a>
                     </div>
                 </div>
             </div>
